# mmnist-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  jc-setup.sh  setup.sh
src/: mlp.c  mlp.cpp
